--- a/doc-V2V_Guide/cfme/topics/assembly/asm_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/topics/assembly/asm_Discovery.adoc
@@ -1,5 +1,14 @@
 [[Discovery]]
 == Discovery
+:procdir: ../procedure
+
+The discovery stage is critical for planning your migration. It will help you to answer the following question:
+
+* What is the source environment that I will be migrating?
+* Does my target environment have sufficient resources for the migration?
+* Am I missing any resources, such as bandwidth or storage?
+* How long will the migration take?
+* How will the migration affect the users? (Currently, {{product-title}} supports only cold migration.)
 
 Add VMware to CF as provider:
 
@@ -9,14 +18,4 @@ Discover infrastructure:
 
 https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#discovering_multiple_management_systems
 
-Discovering the source environment with Cloud Forms (What am I migrating?)
-
-Scaling - minimum and max size migrations? At least a note about max size
-
-Planning the target environment (What will I need to hold it?)
-
-Identifying resource gaps (What am I missing? Ex: bandwidth, storage, licenses, maintenance window) - a reminder
-
-Estimating the time requirements (How long will it take? How long do I have?)
-
-Determining the impact on others (Will this disrupt the production environment? Will users lack access to critical applications?)
+include::{procdir}/proc_Discovering_infrastructure_providers.adoc[]
