--- a/doc-V2V_Guide/cfme/topics/assembly/asm_Installation.adoc
+++ b/doc-V2V_Guide/cfme/topics/assembly/asm_Installation.adoc
@@ -1,16 +1,16 @@
 == Installation
 :procdir: ../procedure
+:condir: ../concept
 
 Before migrating your VMware system, you must install Red Hat Virtualization Manager, a conversion host, and Red Hat CloudForms.
 
 include::{procdir}/proc_Installing_Red_Hat_Virtualization_Manager.adoc[]
 include::{procdir}/proc_Connecting_to_the_Administration_Portal.adoc[]
 include::{procdir}/proc_Installing_Red_Hat_Virtualization_Host.adoc[]
+include::{procdir}/proc_Adding_a_host_to_the_Manager.adoc[]
 
 *(%AP: Do we need to mention networking requirements? The existing system will presumably already have DNS and firewalls set up.)*
 
-=== Attaching Storage
+include::{condir}/con_Storage.adoc[]
 
-What kind of storage are we presuming?
-
-=== Installing Red Hat CloudForms
+include::{procdir}/proc_Installing_CloudForms.adoc[]
