--- a/doc-V2V_Guide/cfme/topics/assembly/asm_Migration.adoc
+++ b/doc-V2V_Guide/cfme/topics/assembly/asm_Migration.adoc
@@ -1,7 +1,7 @@
 [[Migration]]
 == Migration
 
-UI part from CF documentation
+UI part from CF documentation (except that it hasn't been documented yet, because it's new)
 
 Starting a migration plan
 
