--- a/doc-V2V_Guide/cfme/topics/procedure/proc_Installing_Red_Hat_Virtualization_Host.adoc
+++ b/doc-V2V_Guide/cfme/topics/procedure/proc_Installing_Red_Hat_Virtualization_Host.adoc
@@ -8,11 +8,11 @@ Red Hat Virtualization Host (RHVH) is a minimal operating system, based on Red H
 
 RHVH supports NIST 800-53 partitioning requirements to improve security. RHVH uses a NIST 800-53 partition layout by default.
 
-Installing RHVH on a physical machine involves three key steps:
+Installing RHVH on a physical machine comprises three steps:
 
-* Download the RHVH ISO image from the Customer Portal.
-* Write the RHVH ISO image to a USB, CD, or DVD.
-* Install the RHVH minimal operating system.
+* Downloading the RHVH ISO image from the Customer Portal.
+* Writing the RHVH ISO image to a USB, CD, or DVD.
+* Installing the RHVH minimal operating system.
 
 *Prerequisites*
 
