--- a/doc-V2V_Guide/cfme/topics/assembly/asm_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/topics/assembly/asm_Discovery.adoc
@@ -2,20 +2,23 @@
 == Discovery
 :procdir: ../procedure
 
-The discovery stage is critical for planning your migration. It will help you to answer the following question:
+You must use CloudForms to discover your infrastructure providers.
+
+The discovery stage is critical for planning your migration. It will help you to answer the following questions:
 
 * What is the source environment that I will be migrating?
-* Does my target environment have sufficient resources for the migration?
-* Am I missing any resources, such as bandwidth or storage?
+* Does my target environment have sufficient resources for the migration? Is it lacking any resources, such as bandwidth or storage?
 * How long will the migration take?
-* How will the migration affect the users? (Currently, {{product-title}} supports only cold migration.)
+* How will the migration affect the users? (Currently, {product-title} supports only cold migration.) Will they require access to critical applications during the migration?
 
-Add VMware to CF as provider:
+The discovery procedure has 3 key stages:
 
-https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers
-
-Discover infrastructure:
-
-https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#discovering_multiple_management_systems
+* Discovering the infrastructure providers
+* Authenticating the Red Hat Virtualization Manager and hosts
+* Authenticating the VMware vCenter and hosts
 
 include::{procdir}/proc_Discovering_infrastructure_providers.adoc[]
+
+include::{procdir}/proc_Authenticating_RHV_Manager_and_hosts.adoc[]
+
+include::{procdir}/proc_Authenticating_VMware_vCenter_and_hosts.adoc[]
