--- a/doc-V2V_Guide/cfme/topics/assembly/asm_Installation.adoc
+++ b/doc-V2V_Guide/cfme/topics/assembly/asm_Installation.adoc
@@ -1,6 +1,7 @@
 == Installation
 :procdir: ../procedure
 :condir: ../concept
+:refdir: ../reference
 
 Before migrating your VMware system, you must install Red Hat Virtualization Manager, a conversion host, and Red Hat CloudForms.
 
@@ -11,6 +12,6 @@ include::{procdir}/proc_Adding_a_host_to_the_Manager.adoc[]
 
 *(%AP: Do we need to mention networking requirements? The existing system will presumably already have DNS and firewalls set up.)*
 
-include::{condir}/con_Storage.adoc[]
+include::{refdir}/ref_Storage.adoc[]
 
 include::{procdir}/proc_Installing_CloudForms.adoc[]
