--- a/doc-V2V_Guide/cfme/topics/assembly/asm_Planning.adoc
+++ b/doc-V2V_Guide/cfme/topics/assembly/asm_Planning.adoc
@@ -1,20 +1,24 @@
 [[Planning]]
 == Planning
 
+A well-planned migration is critical for success.
+
+You should consider the following questions when planning your migration:
+
+* Schedule:
+** How do I schedule the migration?
+** What downtime can I anticipate?
+* Virtual machines:
+** How are the virtual machines grouped?
+** Which virtual machines should be migrated together?
+* Workloads:
+** What workloads need to migrate together?
+** What applications must remain available?
+
+%%%%%
+notes
+
 Mapping resources with CF
-
-Calculating downtime
-
-Determining VMs to be migrated and their placement (groups)
-
-Creating Migration Plan
-
-Using a discovery report to create a target RHV infrastructure
-
-Identifying workloads to move
-
-* What workloads need to migrate together?
-* What applications must remain available?
 
 Creating migration groups
 
