--- a/doc-V2V_Guide/cfme/topics/concept/con_Overview_of_infrastructure_migration_solution.adoc
+++ b/doc-V2V_Guide/cfme/topics/concept/con_Overview_of_infrastructure_migration_solution.adoc
@@ -1,6 +1,6 @@
 [[Overview_of_infrastructure_migration_solution]]
 
-{product-title} is Red Hat's infrastructure migration solution for moving your VMware environment to Red Hat Virtualization. [To be expanded]
+{product-title} is Red Hat's infrastructure migration solution for moving from VMware to Red Hat Virtualization. [To be expanded]
 
 Red Hat Virtualization is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. Virtualization allows users to easily provision new virtual servers and workstations, and provides more efficient use of physical server resources. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
