--- a/doc-V2V_Guide/cfme/topics/procedure/proc_Adding_a_host_to_the_Manager.adoc
+++ b/doc-V2V_Guide/cfme/topics/procedure/proc_Adding_a_host_to_the_Manager.adoc
@@ -3,7 +3,8 @@
 
 Adding a host to your Red Hat Virtualization environment can take some time, as the following steps are completed by the platform: virtualization checks, installation of packages, and creation of a bridge. Use the details pane to monitor the process as the host and the Manager establish a connection.
 
-*Adding a Host to the Red Hat Virtualization Manager*
+[discrete]
+==== Procedure
 
 . From the Administration Portal, click menu:Compute[Hosts].
 . Click btn:[New].
