--- a/doc-V2V_Guide/cfme/topics/procedure/proc_Discovering_infrastructure_providers.adoc
+++ b/doc-V2V_Guide/cfme/topics/procedure/proc_Discovering_infrastructure_providers.adoc
@@ -4,9 +4,12 @@
 You can discover all infrastructure providers in a given subnet range.
 
 . Navigate to menu:Compute[Infrastructure > Providers].
-. Click  image:1847.png[Configuration] (*Configuration*), then click  image:1942.png[Discover Infrastructure Providers] (*Discover Infrastructure Providers*). 
+. Click image:1847.png[Configuration] (*Configuration*) and click  image:1942.png[Discover Infrastructure Providers] (*Discover Infrastructure Providers*). 
 . Select the types of provider to discover.
 . Enter a *Subnet Range* of IP addresses starting with a *From Address* and ending with a *To Address*. The cursor automatically advances as you complete each octet.
 . Click *Start*.
 
-The appliance searches for all infrastructure providers in the specified subnet range, and adds them to the user interface. However, before you can manage the providers added via discovery, you must edit each provider and specify authentication details.
+The appliance searches for all infrastructure providers in the specified subnet range and adds them to the user interface. 
+
+To manage the providers you have discovered, you must edit each provider and specify authentication details.
+
