--- a/doc-V2V_Guide/cfme/topics/reference/ref_Storage.adoc
+++ b/doc-V2V_Guide/cfme/topics/reference/ref_Storage.adoc
@@ -1,5 +1,6 @@
 [[Storage]]
-=== Storage
+=== Adding Storage
+:refdir: ../reference
 
 You must attach at least one storage domain to each data center. Setting up storage is a prerequisite for a new data center because a data center cannot be initialized unless storage domains are attached and activated. A storage domain can be made of either block devices (iSCSI or Fibre Channel) or a file system.
 
@@ -20,7 +21,7 @@ The following storage types are supported:
 * xref:POSIX[POSIX-Compliant FS]
 * xref:local[Local Storage]
 
-After you have attached the storage domain to the data center, you can xref:Installing_CloudForms[install CloudForms].
+Go to the relevant section to attach your storage.
 
 For background information, see:
 
@@ -29,7 +30,8 @@ For background information, see:
 * link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/index.html[_Red Hat Enterprise Linux Storage Administration Guide_]
 
 [[nfs]]
-*NFS*
+[discrete]
+==== NFS
 
 NFS versions 3 and 4 are supported by Red Hat Virtualization 4. Production workloads require an enterprise-grade NFS server, unless NFS is only being used as an ISO storage domain. When enterprise NFS is deployed over 10GbE, segregated with VLANs, and individual services are configured to use specific ports, it is both fast and secure.
 
@@ -41,8 +43,11 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/administration_guide/sect-preparing_and_adding_nfs_storage[Preparing and Adding NFS Storage] in the _Administration Guide_.
 
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
+
 [[iSCSI]]
-*iSCSI*
+[discrete]
+==== iSCSI
 
 Production workloads require an enterprise-grade iSCSI server. When enterprise iSCSI is deployed over 10GbE, segregated with VLANs, and utilizes CHAP authentication, it is both fast and secure. iSCSI can also use multipathing to improve high availability.
 
@@ -54,8 +59,11 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_iSCSI_Storage1[Adding iSCSI Storage] in the _Administration Guide_.
 
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
+
 [[fc]]
-*Fibre Channel*
+[discrete]
+==== Fibre Channel
 
 Fibre Channel is both fast and secure, and should be taken advantage of if it is already in use in the target data center. It also has the advantage of low CPU overhead as compared to iSCSI and NFS. Fibre Channel can also use multipathing to improve high availability.
 
@@ -67,8 +75,11 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_FCP_Storage[Adding FCP Storage] in the _Administration Guide_.
 
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
+
 [[FCoE]]
-*Fibre Channel over Ethernet*
+[discrete]
+==== Fibre Channel over Ethernet
 
 To use Fibre Channel over Ethernet (FCoE) in Red Hat Virtualization, you must enable the *fcoe* key on the Manager, and install the _vdsm-hook-fcoe_ package on the hosts. 
 
@@ -80,9 +91,11 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#How_to_Set_Up_RHVM_to_Use_FCoE[How to Set Up Red Hat Virtualization Manager to Use FCoE] in the _Administration Guide_.
 
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
 
 [[Gluster]]
-*Red Hat Gluster Storage*
+[discrete]
+==== Red Hat Gluster Storage
 
 Red Hat Gluster Storage (RHGS) is a POSIX-compliant and open source file system. Three or more servers are configured as a Red Hat Gluster Storage cluster, instead of network-attached storage (NAS) appliances or a storage area network (SAN) array.
 
@@ -96,8 +109,11 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_gluster_storage/3.2/html/configuring_red_hat_virtualization_with_red_hat_gluster_storage/[_Configuring Red Hat Virtualization with Red Hat Gluster Storage_]
 
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
+
 [[RHHI]]
-*Red Hat Hyperconverged Infrastructure*
+[discrete]
+==== Red Hat Hyperconverged Infrastructure
 
 Red Hat Hyperconverged Infrastructure (RHHI) combines Red Hat Virtualization and Red Hat Gluster Storage on the same infrastructure, instead of connecting Red Hat Virtualization to a remote Red Hat Gluster Storage server. This compact option reduces operational expenses and overhead. 
 
@@ -107,15 +123,21 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_hyperconverged_infrastructure/1.0/html/maintaining_red_hat_hyperconverged_infrastructure/[_Maintaining Red Hat Hyperconverged Infrastructure_]
 
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
+
 [[Ceph]]
-*Red Hat Ceph File System*
+[discrete]
+==== Red Hat Ceph File System
 
 Red Hat Ceph File System (CephFS) is a file system compatible with POSIX standards that uses a Ceph Storage Cluster to store its data. No special configuration is required on the Red Hat Virtualization side when adding CephFS as a storage domain; it is added the same way as any other POSIX-compliant FS storage. 
 
 See: link:https://access.redhat.com/documentation/en-us/red_hat_ceph_storage/[_Ceph File System Guide_]
 
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
+
 [[POSIX]]
-*POSIX-Compliant FS*
+[discrete]
+==== POSIX-Compliant FS
 
 Other POSIX-compliant file systems can be used as storage domains in Red Hat Virtualization, as long as they are clustered file systems, such as Red Hat Global File System 2 (GFS2), and support sparse files and direct I/O. The Common Internet File System (CIFS), for example, does not support direct I/O, making it incompatible with Red Hat Virtualization. 
 
@@ -125,11 +147,16 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the _Administration Guide_.
 
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
+
 [[local]]
-*Local Storage*
+[discrete]
+==== Local Storage
 
 Local storage is set up on an individual host, using the host's own resources. When you set up a host to use local storage, it is automatically added to a new data center and cluster that no other hosts can be added to. Virtual machines created in a single-host cluster cannot be migrated, fenced, or scheduled.
 
 For Red Hat Virtualization Hosts, local storage should always be defined on a file system that is separate from / (root). Red Hat recommends using a separate logical volume or disk. 
 
 See: link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_Local_Storage[Preparing and Adding Local Storage] in the _Administration Guide_.
+
+include::{refdir}/ref_Storage_to_CF_link.adoc[]
