--- a/doc-Managing_Providers/topics/Ansible_Credentials.adoc
+++ b/doc-Managing_Providers/topics/Ansible_Credentials.adoc
@@ -5,18 +5,19 @@ Credentials are utilized by {product-title} for authentication when running Ansi
 
 == Adding Credentials
 {product-title} can store credentials used by playbooks. Credentials saved in {product-title_short} are matched and executed with a playbook when run.   
-
+/////
 [IMPORTANT]
 ====
 If both {product-title_short} and a VMware provider are located in the same IPv6-only network, use a DNS-resolvable hostname for the VMware provider in the *vCenter Host* field when adding credentials.
 ====
-
+/////
 . Navigate to menu:Automation[Ansible > Credentials].
 . Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Add a New Credential] (*Add a New Credential*).
 . Provide a *Name* for the credential.
 . Select the *Credential Type*. Additional fields will appear depending on the type chosen.
 . Click *Add*.
 
+/////
 [[adding-rhv-credentials]]
 ==== Adding Red Hat Virtualization Credentials
 The following procedure guides you through adding credentials for Red Hat Virtualization.
@@ -31,10 +32,13 @@ The following procedure guides you through adding credentials for Red Hat Virtua
 +
 [IMPORTANT]
 ====
-Append the path `/ovirt_engine/api` to the IP or URL address for your Red Hat Virtualization provider when entering *Host* parameters. See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1/html/administration_guide/chap-automating_rhv_configuration_using_ansible#Ansible_Roles[Ansible Roles] for more information on Ansible Roles available for Red Hat Virtualization.
+* Append the path `/ovirt_engine/api` to the IP or URL address for your Red Hat Virtualization provider when entering *Host* parameters. 
+* Example: *Host*:  `https://your.rhv.com/ovirt_engine/api`  
+* See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1/html/administration_guide/chap-automating_rhv_configuration_using_ansible#Ansible_Roles[Ansible Roles] for more information on Ansible Roles available for Red Hat Virtualization.
 ====
 +
 . Click *Save*.
+/////
 
 == Credential Types
 Each credential type used by {product-title_short} is detailed in the following sections. 
@@ -135,6 +139,22 @@ Rackspace credentials have the following attributes that may be configured:
 
 * *Username*: The username to use to connect to vCenter.
 * *API Key*: The public key related to the administrator ID. 
+
+=== Red Hat Virtualization
+Selecting this credential type enables synchronization of cloud inventory with Red Hat Virtualization.
+
+Red Hat Virtualization credentials have several attributes that may be configured:
+
+* *Username*: The username to use to connect to Red Hat Virtualization.
+* *Password*: The password to use to connect to Red Hat Virtaulization.
+* *Host (Authentication URL)*: The host to be used for authentication.
++
+[IMPORTANT]
+====
+* Enter in *Host* the Red Hat Virtualization provider URL, followed by the path `/ovirt_engine/api`. Example: `https://your.rhv.com/ovirt_engine/api`  
+* See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1/html/administration_guide/chap-automating_rhv_configuration_using_ansible#Ansible_Roles[Ansible Roles] for more information on Ansible Roles available for Red Hat Virtualization.
+====
+
 
 === Satellite 6
 Selecting this credential type enables synchronization of cloud inventory with Red Hat Satellite 6.
