Reorg of material

--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -13,12 +13,12 @@ include::common/attributes/cfme.adoc[]
 :cfme:
 
 :numbered:
-include::topics/assembly/asm_Introduction.adoc[]
-include::topics/assembly/asm_Installation.adoc[]
-include::topics/assembly/asm_Discovery.adoc[]
-include::topics/assembly/asm_Planning.adoc[]
-include::topics/assembly/asm_Migration.adoc[]
-include::topics/assembly/asm_Post-migration.adoc[]
+include::topics/asm_Introduction.adoc[]
+include::topics/asm_Installation.adoc[]
+include::topics/asm_Discovery.adoc[]
+include::topics/asm_Planning.adoc[]
+include::topics/asm_Migration.adoc[]
+include::topics/asm_Post-migration.adoc[]
 
 
 
