--- a/doc-V2V_Guide/cfme/topics/asm_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/topics/asm_Discovery.adoc
@@ -1,6 +1,5 @@
 [[Discovery]]
 == Discovery
-:procdir: ../procedure
 
 You must use CloudForms to discover your infrastructure providers.
 
@@ -17,8 +16,8 @@ The discovery procedure has 3 key stages:
 * Authenticating the Red Hat Virtualization Manager and hosts
 * Authenticating the VMware vCenter and hosts
 
-include::{procdir}/proc_Discovering_infrastructure_providers.adoc[]
+include::modules/proc_Discovering_infrastructure_providers.adoc[]
 
-include::{procdir}/proc_Authenticating_RHV_Manager_and_hosts.adoc[]
+include::modules/proc_Authenticating_RHV_Manager_and_hosts.adoc[]
 
-include::{procdir}/proc_Authenticating_VMware_vCenter_and_hosts.adoc[]
+include::modules/proc_Authenticating_VMware_vCenter_and_hosts.adoc[]
