--- a/doc-V2V_Guide/cfme/topics/asm_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/topics/asm_Introduction.adoc
@@ -9,7 +9,5 @@
 
 == Introduction
 
-:condir: ../concept
-
-include::{condir}/con_Overview_of_infrastructure_migration_solution.adoc[]
+include::modules/con_Overview_of_infrastructure_migration_solution.adoc[]
 
