--- a/doc-V2V_Guide/cfme/topics/modules/con_Overview_of_infrastructure_migration_solution.adoc
+++ b/doc-V2V_Guide/cfme/topics/modules/con_Overview_of_infrastructure_migration_solution.adoc
@@ -6,8 +6,9 @@ Red Hat Virtualization is an enterprise-grade virtualization platform built on R
 
 The migration process is performed with Red Hat CloudForms. CloudForms provides the control and automation that enterprises require to manage challenging virtual environments.
 
-The entire migration process comprises the following stages:
+The entire migration process has 5 key stages:
 
+* Installation
 * Discovery
 * Planning
 * Migration
