--- a/doc-V2V_Guide/cfme/topics/modules/ref_Storage.adoc
+++ b/doc-V2V_Guide/cfme/topics/modules/ref_Storage.adoc
@@ -43,7 +43,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/administration_guide/sect-preparing_and_adding_nfs_storage[Preparing and Adding NFS Storage] in the _Administration Guide_.
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
 
 [[iSCSI]]
 [discrete]
@@ -59,7 +59,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_iSCSI_Storage1[Adding iSCSI Storage] in the _Administration Guide_.
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
 
 [[fc]]
 [discrete]
@@ -75,7 +75,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_FCP_Storage[Adding FCP Storage] in the _Administration Guide_.
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
 
 [[FCoE]]
 [discrete]
@@ -91,7 +91,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#How_to_Set_Up_RHVM_to_Use_FCoE[How to Set Up Red Hat Virtualization Manager to Use FCoE] in the _Administration Guide_.
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
 
 [[Gluster]]
 [discrete]
@@ -109,7 +109,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_gluster_storage/3.2/html/configuring_red_hat_virtualization_with_red_hat_gluster_storage/[_Configuring Red Hat Virtualization with Red Hat Gluster Storage_]
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
 
 [[RHHI]]
 [discrete]
@@ -123,7 +123,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_hyperconverged_infrastructure/1.0/html/maintaining_red_hat_hyperconverged_infrastructure/[_Maintaining Red Hat Hyperconverged Infrastructure_]
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
 
 [[Ceph]]
 [discrete]
@@ -133,7 +133,7 @@ Red Hat Ceph File System (CephFS) is a file system compatible with POSIX standar
 
 See: link:https://access.redhat.com/documentation/en-us/red_hat_ceph_storage/[_Ceph File System Guide_]
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
 
 [[POSIX]]
 [discrete]
@@ -147,7 +147,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the _Administration Guide_.
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
 
 [[local]]
 [discrete]
@@ -159,4 +159,4 @@ For Red Hat Virtualization Hosts, local storage should always be defined on a fi
 
 See: link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_Local_Storage[Preparing and Adding Local Storage] in the _Administration Guide_.
 
-include::{refdir}/ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_to_CF_link.adoc[]
