--- a/doc-V2V_Guide/cfme/topics/asm_Installation.adoc
+++ b/doc-V2V_Guide/cfme/topics/asm_Installation.adoc
@@ -12,3 +12,5 @@ include::modules/proc_Adding_a_host_to_the_Manager.adoc[]
 include::modules/ref_Storage.adoc[]
 
 include::modules/proc_Installing_CloudForms.adoc[]
+include::modules/proc_Configuring_CloudForms.adoc[]
+include::modules/proc_Logging_in_to_CloudForms.adoc[]
