--- a/doc-V2V_Guide/cfme/topics/modules/ref_Storage.adoc
+++ b/doc-V2V_Guide/cfme/topics/modules/ref_Storage.adoc
@@ -1,6 +1,5 @@
 [[Storage]]
 === Adding Storage
-:refdir: ../reference
 
 You must attach at least one storage domain to each data center. Setting up storage is a prerequisite for a new data center because a data center cannot be initialized unless storage domains are attached and activated. A storage domain can be made of either block devices (iSCSI or Fibre Channel) or a file system.
 
@@ -27,21 +26,21 @@ For background information, see:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/administration_guide/chap-storage[Storage] in the _Administration Guide_.
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/index.html[_Red Hat Enterprise Linux Storage Administration Guide_]
+* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/index.html[_Red Hat Enterprise Linux Storage Administration Guide_].
 
 [[nfs]]
 [discrete]
 ==== NFS
 
-NFS versions 3 and 4 are supported by Red Hat Virtualization 4. Production workloads require an enterprise-grade NFS server, unless NFS is only being used as an ISO storage domain. When enterprise NFS is deployed over 10GbE, segregated with VLANs, and individual services are configured to use specific ports, it is both fast and secure.
+NFS versions 3 and 4 are supported by Red Hat Virtualization 4. Production workloads require an enterprise-grade NFS server, unless NFS is only being used as an ISO storage domain. When enterprise NFS is deployed over 10 GbE, segregated with VLANs, and individual services are configured to use specific ports, it is both fast and secure.
 
 As NFS exports are grown to accommodate more storage needs, Red Hat Virtualization recognizes the larger data store immediately. No additional configuration is necessary on the hosts or from within Red Hat Virtualization. This provides NFS a slight edge over block storage from a scale and operational perspective.
 
 See:
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html-single/Storage_Administration_Guide/index.html#ch-nfs[Network File System (NFS)] in the _Red Hat Enterprise Linux Storage Administration Guide_.
-
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/administration_guide/sect-preparing_and_adding_nfs_storage[Preparing and Adding NFS Storage] in the _Administration Guide_.
+
+* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html-single/Storage_Administration_Guide/index.html#ch-nfs[Network File System (NFS)] in the _Red Hat Enterprise Linux Storage Administration Guide_ for general information.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -49,15 +48,15 @@ include::ref_Storage_to_CF_link.adoc[]
 [discrete]
 ==== iSCSI
 
-Production workloads require an enterprise-grade iSCSI server. When enterprise iSCSI is deployed over 10GbE, segregated with VLANs, and utilizes CHAP authentication, it is both fast and secure. iSCSI can also use multipathing to improve high availability.
+Production workloads require an enterprise-grade iSCSI server. When enterprise iSCSI is deployed over 10 GbE, segregated with VLANs, and with CHAP authentication, it is both fast and secure. iSCSI can also use multipathing to improve high availability.
 
 Red Hat Virtualization supports 1500 logical volumes per block-based storage domain. No more than 300 LUNs are permitted.
 
 See:
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_.
-
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_iSCSI_Storage1[Adding iSCSI Storage] in the _Administration Guide_.
+
+* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_ for general information.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -65,15 +64,15 @@ include::ref_Storage_to_CF_link.adoc[]
 [discrete]
 ==== Fibre Channel
 
-Fibre Channel is both fast and secure, and should be taken advantage of if it is already in use in the target data center. It also has the advantage of low CPU overhead as compared to iSCSI and NFS. Fibre Channel can also use multipathing to improve high availability.
+Fibre Channel is both fast and secure, and should be taken advantage of if it is already used in the target data center. It also has the advantage of low CPU overhead, compared to iSCSI and NFS. Fibre Channel can also use multipathing to improve high availability.
 
 Red Hat Virtualization supports 1500 logical volumes per block-based storage domain. No more than 300 LUNs are permitted.
 
 See:
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_.
-
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_FCP_Storage[Adding FCP Storage] in the _Administration Guide_.
+
+* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_ for general information.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -87,9 +86,9 @@ Red Hat Virtualization supports 1500 logical volumes per block-based storage dom
 
 See:
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_.
-
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#How_to_Set_Up_RHVM_to_Use_FCoE[How to Set Up Red Hat Virtualization Manager to Use FCoE] in the _Administration Guide_.
+
+* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_ for general information.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -97,17 +96,17 @@ include::ref_Storage_to_CF_link.adoc[]
 [discrete]
 ==== Red Hat Gluster Storage
 
-Red Hat Gluster Storage (RHGS) is a POSIX-compliant and open source file system. Three or more servers are configured as a Red Hat Gluster Storage cluster, instead of network-attached storage (NAS) appliances or a storage area network (SAN) array.
+Red Hat Gluster Storage (RHGS) is a POSIX-compliant, open-source file system. Three or more servers are configured as a Red Hat Gluster Storage cluster, instead of network-attached storage (NAS) appliances or a storage area network (SAN) array.
 
-Red Hat Gluster Storage should be utilized over 10GbE and segregated with VLANs.
+Red Hat Gluster Storage should be utilized over 10 GbE and segregated with VLANs.
 
 Check the compatibility matrix in link:https://access.redhat.com/articles/2356261[] before using RHGS with Red Hat Virtualization.
 
 See: 
 
-* link:https://access.redhat.com/documentation/en-us/red-hat-gluster-storage/[Red Hat Gluster Storage]
-
 * link:https://access.redhat.com/documentation/en-us/red_hat_gluster_storage/3.2/html/configuring_red_hat_virtualization_with_red_hat_gluster_storage/[_Configuring Red Hat Virtualization with Red Hat Gluster Storage_]
+
+* link:https://access.redhat.com/documentation/en-us/red-hat-gluster-storage/[Red Hat Gluster Storage] for general information.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -119,7 +118,7 @@ Red Hat Hyperconverged Infrastructure (RHHI) combines Red Hat Virtualization and
 
 See:
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_hyperconverged_infrastructure/1.0/html/deploying_red_hat_hyperconverged_infrastructure/[_Deploying Red Hat Hyperconverged Infrastructure_]
+* link:https://access.redhat.com/documentation/en-us/red_hat_hyperconverged_infrastructure/1.0/html/deploying_red_hat_hyperconverged_infrastructure/configure-gluster-rhv-manager[_Configure Red Hat Gluster Storage as a Red Hat Virtualization storage domain_]
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_hyperconverged_infrastructure/1.0/html/maintaining_red_hat_hyperconverged_infrastructure/[_Maintaining Red Hat Hyperconverged Infrastructure_]
 
@@ -129,9 +128,9 @@ include::ref_Storage_to_CF_link.adoc[]
 [discrete]
 ==== Red Hat Ceph File System
 
-Red Hat Ceph File System (CephFS) is a file system compatible with POSIX standards that uses a Ceph Storage Cluster to store its data. No special configuration is required on the Red Hat Virtualization side when adding CephFS as a storage domain; it is added the same way as any other POSIX-compliant FS storage. 
+Red Hat Ceph File System (CephFS) is a file system compatible with POSIX standards that uses a Ceph Storage Cluster to store its data. No special configuration is required on the Red Hat Virtualization side when adding CephFS as a storage domain. It is added the same way as any other POSIX-compliant FS storage. 
 
-See: link:https://access.redhat.com/documentation/en-us/red_hat_ceph_storage/[_Ceph File System Guide_]
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the _Administration Guide_.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -160,3 +159,4 @@ For Red Hat Virtualization Hosts, local storage should always be defined on a fi
 See: link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_Local_Storage[Preparing and Adding Local Storage] in the _Administration Guide_.
 
 include::ref_Storage_to_CF_link.adoc[]
+
