--- a/doc-Installing_on_OpenShift_Container_Platform/topics/configuring_external_auth_ocp.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/configuring_external_auth_ocp.adoc
@@ -1,15 +1,11 @@
 [[configuring-authentication]]
 == Configuring External Authentication to {product-title_short}
 
-After installing {product-title_short}, you can configure external authentication using the `httpd` pod.
+After installing {product-title_short}, configure external authentication by updating the configmap on the `httpd` pod. The updated configmap is generated using the `httpd-configmap-generator` running in its own pod.
 
-Upon startup, the `httpd` pod overlays its files with the ones specified in the `auth-configuration.conf` file in the `authconfig` configuration map. This is done by the `initialize-httpd-auth` service that runs before `httpd`.
+Configuring the `httpd` pod for external authentication is done by updating the `httpd-auth-configs` configuration map to include all necessary configuration files and certificates. Upon startup, the httpd pod overlays its files with the ones specified in the `auth-configuration.conf` file in the configuration map. This is done by the `initialize-httpd-auth` service that runs before httpd.
 
-Configuring the `httpd` pod for external authentication is done by updating the `httpd-auth-configs` configuration map to include all necessary configuration files and certificates. 
-
-You can configure the configuration map manually using the steps in <<manually-defining-configmap>>, or automatically using the steps in <<automatic-defining-configmap>>. 
-
-See <<configmap-settings>> for configuration map parameters.
+Configure the configuration map automatically using the steps in <<automatic-defining-configmap>>. 
 
 === Supported Authentication Types
 
@@ -27,22 +23,8 @@ See <<configmap-settings>> for configuration map parameters.
 [[automatic-defining-configmap]]
 === Configuring External Authentication Automatically
 
-You can automatically generate `authconfig` maps for the `httpd` pod with the `httpd_configmap_generator` pod, available as a Ruby gem.
+To automatically generate an `authconfig` map, run the `httpd_configmap_generator` tool with your desired parameters:
 
-This gem provides a command-line interface to automate the generation of `authconfig` maps, which can be used with the `httpd auth` pod to enable external authentication.
-
-==== Creating an `authconfig` Configuration Map
-
-To automatically generate an `authconfig` map:
-
-. Install the `httpd_configmap_generator` tool:
-+
-----
-# gem install httpd_configmap_generator
-----
-+
-. Run the `httpd_configmap_generator` tool with your desired parameters:
-+
 ----
 $ httpd_configmap_generator <command_or_authentication_type>
 ----
@@ -57,8 +39,6 @@ Run `$ httpd_configmap_generator --help` to show available parameters. To show t
 
 With the `update` subcommand, you can add file(s) to the configuration
 map to specify file ownership and permissions. The `--add-file` option can be specified multiple times, one per file to add to a configuration map.
-
-//what does adding files do?
 
 Supported file specifications for the `--add-file` option are:
 
@@ -255,6 +235,8 @@ $ oc replace configmaps httpd-auth-configs --filename ./external-ipa.yaml
 
 
 To generate a new auth configuration map, redeploy the `httpd-configmap-generator` pod first to get a clean environment before running the `httpd-configmap-generator` tool.
+
+If additional configuration is needed, you can configure the configuration map manually using the steps in <<manually-defining-configmap>>. See <<configmap-settings>> for configuration map parameters.
 
 ===== Cleaning up
 
