Added bash -c from Ievgen's revew

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/configuring_external_auth_ocp.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/configuring_external_auth_ocp.adoc
@@ -206,7 +206,7 @@ The following example shows how to generate a configmap for external authenticat
 . To generate an `authconfig` map for external authentication against IPA, run
 +
 ----
-$ oc rsh $CONFIGMAP_GENERATOR_POD httpd_configmap_generator ipa \
+$ oc rsh $CONFIGMAP_GENERATOR_POD -- bash -c 'httpd_configmap_generator ipa \
 --host=appliance.example.com        \
 --ipa-server=ipaserver.example.com  \
 --ipa-domain=example.com            \
