Edits for Eugene's review

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/appe-saml-authentication-example.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/appe-saml-authentication-example.adoc
@@ -19,11 +19,13 @@ This parameter controls which configuration files `httpd` will load upon startup
 | `saml` | SAML based authentication (Keycloak, ADFS, etc.)
 |====
 +
+Enable external authentication in the user interface; see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/managing_authentication_for_cloudforms/external_auth for details.
++
 * `auth-kerberos-realms` - The Kerberos realms to join.
 +
 When configuring external authentication against IPA, Active Directory or LDAP, this parameter defines the Kerberos realm `httpd`  is configured against, such as _example.com_. When specifying multiple Kerberos realms, they must be separated by spaces. The default is `undefined`.
 +
-* `auth-configuration.conf` - The external authentication configuration file  which declares the list of files to overlay upon startup if `auth-type` is other than `internal`.
+* `auth-configuration.conf` - The external authentication configuration file which declares the list of files to overlay upon startup if `auth-type` is other than `internal`.
 +
 Syntax for the file is as follows:
 +
