Slight reorg. Migration section

--- a/doc-V2V_Guide/cfme/doc/asm_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Discovery.adoc
@@ -1,7 +1,7 @@
 [[Discovery]]
 == Discovery
 
-You must use CloudForms to discover your infrastructure providers.
+You can use CloudForms to discover your infrastructure providers.
 
 The discovery stage is critical for planning your migration. It will help you to answer the following questions:
 
