--- a/doc-V2V_Guide/cfme/doc/asm_Migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Migration.adoc
@@ -12,3 +12,8 @@ Estimating how long migration will take
 Estimating the remaining migration time
 
 Viewing running migrations
+
+include::modules/proc_Creating_a_Conversion_Host.adoc[]
+include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[]
+include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[]
+
