--- a/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
@@ -1,7 +1,7 @@
 [[Discovering_infrastructure_providers]]
 === Discovering Infrastructure Providers
 
-You can discover all infrastructure providers in a given subnet range.
+You can discover all infrastructure providers in a given subnet range. *(%AP: Is this OK or is it better to discover VMware and RHV providers separately?)*
 
 . Navigate to menu:Compute[Infrastructure > Providers].
 . Click image:1847.png[Configuration] (*Configuration*) and click  image:1942.png[Discover Infrastructure Providers] (*Discover Infrastructure Providers*). 
