--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_CloudForms.adoc
@@ -7,6 +7,11 @@ The procedure for installing CloudForms on your Red Hat Virtualization system ha
 * Creating a virtual machine based on the appliance
 * Configuring CloudForms
 
+[NOTE]
+====
+These procedures describe how to install and configure a basic CloudForms environment. For more options, see the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/[CloudForms documentation].
+====
+
 [discrete]
 ==== Downloading the CloudForms Appliance
 
@@ -110,3 +115,9 @@ image:5780.png[]
 . To start the CloudForms appliance, select the virtual machine from the *Virtual Machines* tab and click image:greentriangle.png[] (*Run*). 
 
 Your Red Hat Virtualization environment now contains a running CloudForms appliance.
+
+[discrete]
+==== Enabling Git Repositories
+
+*(%AP: Do Git repositories need to be enabled? See https://docs.google.com/document/d/19345CNVTvDWgTz2hjavbyPn2yk26cM0fTKJnijfBsyY/edit#heading=h.bm32a1ypyozf. Also, do they need to add v2v Automation Domain?)*
+
