--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
@@ -11,6 +11,11 @@ The procedure for installing Red Hat Virtualization Manager has 5 key stages:
 * Configuring the Manager
 * Connecting to the Administration Portal
 
+[NOTE]
+====
+These procedures describe how to install and configure a basic Red Hat Virtualization environment. For more options, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/[Red Hat Virtualization Documentation].
+====
+
 [discrete]
 ==== Prerequisites
 
