--- a/doc-V2V_Guide/cfme/doc/asm_Post-migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Post-migration.adoc
@@ -1,6 +1,8 @@
 [[Post-migration]]
 == Post-migration
 
+*(%AP: How many of these tasks can be automated? If so, refer from Planning > Creating Playbooks)*
+
 Miscellaneous tasks after you've completed migration. Tying up loose ends, fixing stuff that didn't work.
 
 Checking for incomplete migrations (UI or log?)
@@ -18,3 +20,5 @@ Restoring to original state
 Retrying failed migrations
 
 Reversing successful migrations
+
+Trouble-shooting info: https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/01-redhat_solutions-insfrastructure_migration_v2-troubleshooting.adoc
